# device_registration

./: .gitignore  .gitmodules  README.md
cache/: compressed_snark.bson  decider_vk.bson
client/: Cargo.toml
client/device_register/src/: main.c
client/src/: main.rs  utils.rs
contract-abi/: demo.abi  nova_decider_abi.json  nova_iotex_reward_abi.json
hardhat/: package-lock.json
hardhat/artifacts/contracts/DemoOnchainRewards.sol/: INovaDecider.json  IoTeXRewardDistributor.json
hardhat/artifacts/contracts/OnchainVerifier.sol/: KZG10Verifier.json  LimbsDecomposition.json
hardhat/contracts/: OnchainVerifier.sol
hardhat/scripts/: deploy-rewards-demo.js
onchain/: Cargo.toml  README.md
onchain/cache/: compressed_snark.bson  decider_vk.bson
onchain/hardhat/: hardhat.config.js
onchain/hardhat/artifacts/contracts/DemoOnchainRewards.sol/: IIoID.dbg.json  IIoID.json  IIoIDRegistry.json  INovaDecider.json  IoTeXRewardDistributor.dbg.json  IoTeXRewardDistributor.json
onchain/hardhat/artifacts/contracts/OnchainVerifier.sol/: Groth16Verifier.dbg.json  Groth16Verifier.json  KZG10Verifier.dbg.json  KZG10Verifier.json  LimbsDecomposition.json  NovaDecider.json
onchain/hardhat/cache/: solidity-files-cache.json
onchain/hardhat/contracts/: DemoOnchainRewards.sol  OnchainVerifier.sol  solidity-calldata.calldata  solidity-calldata.inputs
onchain/hardhat/scripts/: deploy-onchain-verifier.js  deploy-rewards-demo.js
onchain/src/: constants.rs  contracts.rs  main.rs  proof.rs  solidity.rs  test.rs  utils.rs
server/: Cargo.toml
server/contract-abi/: ioIDRegistry-ABI.json
server/src/: main.rs
src/: calldata.rs  main.rs
