[package]
name = "signDataRust"
version = "0.1.0"
edition = "2021"
default-run = "signDataRust"

[dependencies]
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
ff = "0.13.0"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.89"
radius-circuit = { git = "https://github.com/AntoineF4C5/radius-circuit.git" }
pasta_curves = { version = "0.5", features = ["repr-c", "serde"] }
nova = { git = "https://github.com/wyattbenno777/arecibo", branch = "feat/nebula", package = "arecibo" }
