[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "server"

[dependencies]
axum = "0.7.7"
ff = "0.13.0"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
radius-circuit = { git = "https://github.com/AntoineF4C5/radius-circuit.git", commit = "829a5cb65466d259897e5a039554275c5811486a" }
pasta_curves = { version = "0.5", features = ["repr-c", "serde"] }
# nova = { git = "https://github.com/wyattbenno777/arecibo", branch = "feat/nebula", package = "arecibo" }
zk-engine = { git = "https://github.com/ICME-Lab/zkEngine_dev.git" }
web3 = "0.19.0"
dotenv = "0.14.1"
